Add exclusion filters to slots, enforce unique documentId